# emmylua-render

./: .emmyrc.json  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .stylua.toml  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/emmylua_render/: cli.py  jinja.py  raw_models.py  render.py  type_parser.py
src/emmylua_render/default_templates/markdown/: alias.jinja  class.jinja  enum.jinja  field.jinja  function.jinja  list.jinja  toc.jinja  typeref.jinja
src/emmylua_render/default_templates/vimdoc/: alias.jinja  class.jinja  enum.jinja  field.jinja  function.jinja  list.jinja  toc.jinja
src/emmylua_render/pandoc/: _pandoc_meta.lua  vimdoc_writer.lua
tests/: conftest.py
tests/files/: doc.json
tests/files/template/: section.jinja  vimdoc_writer.md
tests/functional/: test_vimdoc_writer.py
tests/unit/: test_type_parser.py
