[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[project]
name = "emmylua-render"
version = "0.1.0"
description = "Render custom emmylua_doc_cli (EmmyLuaLS) docs with Jinja"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.6",
    "lark>=1.3.1",
    "pydantic>=2.12.3",
]

[project.scripts]
emmylua-render = "emmylua_render.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
